# Tests for users
TESTS = \
  lib/users/ca_password_validator_test.rb \
  lib/users/encryption_method_test.rb \
  lib/users/ssh_authorized_keys_file_test.rb \
  lib/users/users_database_test.rb \
  dialogs_test.rb \
  ssh_authorized_keys_test.rb \
  users_auto_test.rb \
  users_finish_test.rb \
  widgets_test.rb

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec
VERBOSE = 1
EXTRA_DIST = $(TESTS)
