# Tests for users
TESTS = \
  lib/users/ca_password_validator_test.rb \
  lib/users/encryption_method_test.rb \
  lib/users/ssh_authorized_keys_file_test.rb \
  lib/users/users_database_test.rb \
  lib/users/leaf_blk_device_test.rb \
  lib/users/ssh_public_key_test.rb \
  lib/users/widgets/disk_selector_test.rb \
  lib/users/widgets/inst_root_first_test.rb \
  lib/users/widgets/public_key_selector_test.rb \
  lib/users/widgets/public_keys_list_test.rb \
  dialogs_test.rb \
  ssh_authorized_keys_test.rb \
  users_test.rb \
  users_auto_test.rb \
  users_finish_test.rb \
  widgets_test.rb

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec
VERBOSE = 1
EXTRA_DIST = $(TESTS)
