# Tests for users
TESTS = \
  lib/y2users/config_manager_test.rb \
  lib/y2users/config_merger_test.rb \
  lib/y2users/config_test.rb \
  lib/y2users/login_config_test.rb \
  lib/y2users/user_test.rb \
  lib/y2users/username_test.rb \
  lib/y2users/user_validator_test.rb \
  lib/y2users/group_test.rb \
  lib/y2users/password_test.rb \
  lib/y2users/password_validator_test.rb \
  lib/y2users/collision_checker_test.rb \
  lib/y2users/validation_config_test.rb \
  lib/y2users/shadow_date_test.rb \
  lib/y2users/help_texts_test.rb \
  lib/y2users/config_element_examples.rb \
  lib/y2users/config_element_collection_examples.rb \
  lib/y2users/useradd_config_test.rb \
  lib/y2users/users_collection_test.rb \
  lib/y2users/groups_collection_test.rb \
  lib/y2users/config_element_examples.rb \
  lib/y2users/password_helper_test.rb \
  lib/y2users/clients/inst_user_first_test.rb \
  lib/y2users/clients/inst_root_first_test.rb \
  lib/y2users/linux/base_reader_test.rb \
  lib/y2users/linux/local_reader_test.rb \
  lib/y2users/linux/reader_test.rb \
  lib/y2users/linux/writer_test.rb \
  lib/y2users/autoinst/config_merger_test.rb \
  lib/y2users/autoinst/reader_test.rb \
  lib/y2users/autoinst_profile/group_section_test.rb \
  lib/y2users/autoinst_profile/groups_section_test.rb \
  lib/y2users/autoinst_profile/login_settings_section_test.rb \
  lib/y2users/autoinst_profile/password_settings_section_test.rb \
  lib/y2users/autoinst_profile/user_defaults_section_test.rb \
  lib/y2users/autoinst_profile/user_section_test.rb \
  lib/y2users/autoinst_profile/users_section_test.rb \
  lib/users/ca_password_validator_test.rb \
  lib/users/encryption_method_test.rb \
  lib/users/ssh_authorized_keys_file_test.rb \
  lib/users/users_database_test.rb \
  lib/users/leaf_blk_device_test.rb \
  lib/users/ssh_public_key_test.rb \
  lib/users/clients/auto_test.rb \
  lib/users/clients/users_finish_test.rb \
  lib/users/dialogs/inst_root_first_test.rb \
  lib/users/dialogs/inst_user_first_test.rb \
  lib/users/widgets/inst_root_first_test.rb \
  lib/users/widgets/public_key_selector_test.rb \
  dialogs_test.rb \
  ssh_authorized_keys_test.rb \
  users_test.rb \
  users_simple_test.rb \
  widgets_test.rb

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec
VERBOSE = 1
EXTRA_DIST = $(TESTS)
